--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .logo {
